fix：修复Collapse组件中弹框被遮挡问题 (#4387)

--- a/scss/components/_collapse.scss
+++ b/scss/components/_collapse.scss
@@ -3,7 +3,7 @@
   padding: 0;
   line-height: px2rem(20px);
   border-radius: 4px;
-  overflow: hidden;
+  // overflow: hidden;
 
   &-header {
     font-size: var(--Collapse-header-fontSize);
